got the alignment issue corrected

--- a/src/containers/Home/styles.css
+++ b/src/containers/Home/styles.css
@@ -1,6 +1,10 @@
 .homeContainer{
-    width:90%;
     display: inline-block;
+    width: 100%;
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 20px 0;
 
 
 }
@@ -12,7 +16,7 @@
     color: #565673;
     font-size: 15px;
     letter-spacing: 1.2px;
-    border: 10px solid #565673;
+    border: 2px solid #d9d9d9;
     text-align: center;
     background-color: white
 
@@ -27,26 +31,35 @@
 }
 
 .leftComponent{
-border-bottom: 10px solid #565673;
-border-left: 10px solid #565673;
-border-right: 5px solid #565673;
+border-bottom: 2px solid #d9d9d9;
+border-left: 2px solid #d9d9d9;
+border-right: 1px solid #d9d9d9;
 width: 40%;
 background-color: #f5f3e6;
+color: #565673;
+font-size: 12px;
+letter-spacing: 1.2px;
 }
 
 .middleComponent{
-border-bottom: 10px solid #565673;
-border-left: 5px solid #565673;
-border-right: 5px solid #565673;
+border-bottom: 2px solid #d9d9d9;
+border-left: 1px solid #d9d9d9;
+border-right: 1px solid #d9d9d9;
 width: 40%;
-background-color: #e6f0f5
+background-color: #e6f0f5;
+color: #565673;
+font-size: 12px;
+letter-spacing: 1.2px;
 
 }
 
 .rightComponent{
-border-bottom: 10px solid #565673;
-border-left: 5px solid #565673;
-border-right: 10px solid #565673;
+border-bottom: 2px solid #d9d9d9;
+border-left: 1px solid #d9d9d9;
+border-right: 1px solid #d9d9d9;
 width: 40%;
 background-color: #ebf5ee;
+color: #565673;
+font-size: 12px;
+letter-spacing: 1.2px;
 }
